# Gatekeeper

./: .gitignore  demo_records.json  freight.html  pyproject.toml  readme.md  real_eval_risks.json  report.html
examples/: analyze_saved.py  calibrate_demo.py  dataset_demo.py  eval_demo.py  extract_demo.py  feedback_demo.py  freight_demo.py  freight_gate_demo.py  policy_demo.py  real_invoice_eval.py  signals_demo.py  streamlit_app.py  walking_skeleton.py
gatekeeper/: __init__.py  config.py  interfaces.py  pipeline.py  schema.py  stubs.py  types.py
gatekeeper/app/: __init__.py  cli.py  persistence.py  report.py
gatekeeper/calibration/: __init__.py  logistic.py  metrics.py
gatekeeper/data/: __init__.py  example.py  fixtures.py  freight.py  loader.py  matching.py  real_invoice.py
gatekeeper/evaluation/: __init__.py  ablation.py  curves.py  plots.py
gatekeeper/extract/: __init__.py  client.py  extractor.py
gatekeeper/feedback/: __init__.py  loop.py
gatekeeper/policy/: __init__.py  cost_aware.py  risk_control.py
gatekeeper/signals/: __init__.py  consistency.py  grounding.py  rules.py  two_temperature.py
tests/: test_app.py  test_calibration.py  test_dataset.py  test_evaluation.py  test_extractor.py  test_feedback.py  test_freight.py  test_policy.py  test_real_invoice.py  test_signals.py  test_walking_skeleton.py
