[project]
name = "gatekeeper"
version = "0.0.1"
description = "A confidence-gating / selective-escalation layer for LLM extraction."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gatekeeper-gate = "gatekeeper.app.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
eval = ["matplotlib>=3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gatekeeper*"]